fix problem with horizontal scroll

--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,9 +1,9 @@
 /*Colors*/
-$primary-color:#EAEEDE;
-$secundary-color:#e0a765;
+$primary-color:#eed6b8;
+$secondary-color:#d49dd6;
 $accent-color:#e27448;
-$background-color:#852f88;
-$light-color:white;
+$background-color:#f5f5f8;
+$light-color:rgb(255, 255, 255);
 $dark-color:#2c2c2c;
 
 /*Font-Family*/
